--- a/Selenium-Automation-Elearning-Framework-TestNG/.classpath
+++ b/Selenium-Automation-Elearning-Framework-TestNG/.classpath
@@ -9,19 +9,10 @@
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="documents"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_241"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/SanthoshKumarBoggara/.m2/repository/net/bytebuddy/byte-buddy/1.7.5/byte-buddy-1.7.5.jar" sourcepath="C:/Users/SanthoshKumarBoggara/.m2/repository/net/bytebuddy/byte-buddy/1.7.5/byte-buddy-1.7.5-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="net.bytebuddy"/>
-			<attribute name="maven.artifactId" value="byte-buddy"/>
-			<attribute name="maven.version" value="1.7.5"/>
-			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
