--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
@@ -1,7 +1,7 @@
 # domain working on 
-##baseURL=http://retail.upskills.in/     OLD
+##baseURL=http://retail.upskills.in/     OLD URL * DO NOT USE*
 baseURL=http://retailm1.upskills.in/
-
+adminURL=http://retailm1.upskills.in/admin 
 
 # implicit wait will be in seconds here 
 implicitWait=30
