Complex Test Cases - RTTC064, RTTC065 & RTTC066

--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
@@ -2,6 +2,7 @@
 ##baseURL=http://retail.upskills.in/     OLD URL * DO NOT USE*
 baseURL=http://retailm1.upskills.in/
 adminURL=http://retailm1.upskills.in/admin 
+excelPath=C:\Users\SanthoshKumarBoggara\git\repository\git3\Selenium-Automation-Elearning-Framework-TestNG\documents\DataSheet.xlsx
 
 # implicit wait will be in seconds here 
 implicitWait=30
